--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.19",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
@@ -22,10 +24,15 @@
     "@mikro-orm/core": "^4.3.4",
     "@mikro-orm/migrations": "^4.3.4",
     "@mikro-orm/postgresql": "^4.3.4",
+    "@types/validator": "^13.1.2",
     "apollo-server-express": "^2.19.1",
+    "argon2": "^0.27.1",
+    "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "metadata": "^0.1.0",
     "pg": "^8.5.1",
+    "reflect": "^0.1.3",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1"
   },
