--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/connect-redis": "^0.0.16",
+    "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/node": "^14.14.19",
+    "@types/redis": "^2.8.28",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   },
@@ -28,10 +31,13 @@
     "apollo-server-express": "^2.19.1",
     "argon2": "^0.27.1",
     "class-validator": "^0.12.2",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "metadata": "^0.1.0",
     "pg": "^8.5.1",
+    "redis": "^3.0.2",
     "reflect": "^0.1.3",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1"
