--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,16 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@urql/exchange-graphcache": "^3.3.3",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "latest",
+    "next-urql": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
     "urql": "^1.11.4"
   },
   "license": "MIT",
